adicionados filmes e series

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -63,6 +63,8 @@
                 <li class = "mb-sm">Malévola: Dona do mal</li>
                 <li class = "mb-sm">Nasce uma estrela</li>
                 <li class = "mb-sm">Exterminador do Futuro: Destino Sombrio</li>
+                <li class = "mb-sm">Velozes e Furiosos 8</li>
+                <li class = "mb-sm">Procurando Dory</li>
             </ul>
         </div>
         
