--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -31,6 +31,7 @@
         <li class = "mb-sm">Os segredos da mente milionária (175 páginas), por T. Harv Eker (23/05/2019 + 76 dias)</li>
         <li class = "mb-sm">A Sutil Arte de Ligar o Foda-se (223 páginas), por Mark Manson (08/08/2019 + 32 dias)</li>
         <li class = "mb-sm">Quem mexeu no meu queijo? (110 páginas), por Spencer Johnson (09/09/2019 + 4 dias)</li>
+        <li class = "mb-sm">Dúvida Cruel (183 páginas), por Manual do Mundo (13/11/2019 + 27 dias)</li>
 	</ul>
 	
 	<div class = "p-secao">
