--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -20,7 +20,13 @@
     <hr>
     
     <div class = "p-secao">
-        <h3>2019</h3>
+        <h3>2020</h3>
+    </div>
+	<ul>
+	</ul>
+    
+    <div class = "p-secao">
+        <h3>2019 (9)</h3>
     </div>
 	<ul>
 		<li class = "mb-sm">O Milagre da Manhã (194 páginas), por Hal Elrod (18/02/2019 + 8 dias)</li>
