--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -18,6 +18,48 @@
     Nessa página segue portanto o registro desse <strong>compromisso</strong>.
     
     <hr/>
+    <!-- 2020 -->
+    <div class = "p-secao">
+        <h3>2020</h3>
+    </div>
+    
+    <div class = "row">
+        <div class = "col">
+            <div class = "p-secao-sm">
+                <h5>Games</h5> 
+                
+            </div>
+            <ul>
+            </ul>
+            
+            <div class = "p-secao-sm">
+                <h5>Filmes</h5>
+            </div>
+            <ul>
+                <li class = "mb-sm">Frozen 2</li>
+            </ul>
+        </div>
+        
+        <div class = "col">
+            <div class = "p-secao-sm">
+                <h5>Séries</h5>
+            </div>
+            <ul>
+            </ul>
+            
+            <div class = "p-secao-sm">
+                <h5>Animes</h5>
+            </div>
+            
+            <div class = "p-secao-sm">
+                <h5>HQs</h5>                
+            </div>
+            <ul>
+            </ul>
+        </div>
+    </div>
+    <hr/>
+    
     <!-- 2019 -->
     <div class = "p-secao">
         <h3>2019</h3>
@@ -26,15 +68,17 @@
     <div class = "row">
         <div class = "col">
             <div class = "p-secao-sm">
-                <h5>Games:</h5>
+                <h5>Games (3) <small>(Mesma qtd. 2018)</small></h5> 
+                
             </div>
             <ul>
                 <li class = "mb-sm">The Awesome Adventures of Captain Spirit</li>
                 <li class = "mb-sm">A Jornada - FIFA19</li>
+                <li class = "mb-sm">Detroit: Become Human</li>
             </ul>
             
             <div class = "p-secao-sm">
-                <h5>Filmes:</h5>
+                <h5>Filmes (29) <small>(+10 vs 2018)</small></h5>
             </div>
             <ul>
                 <li class = "mb-sm">Black Mirror Bandersnatch</li>
@@ -65,26 +109,28 @@
                 <li class = "mb-sm">Exterminador do Futuro: Destino Sombrio</li>
                 <li class = "mb-sm">Velozes e Furiosos 8</li>
                 <li class = "mb-sm">Procurando Dory</li>
+                <li class = "mb-sm">Senhor dos Anéis: A Sociedade do Anel</li>
             </ul>
         </div>
         
         <div class = "col">
             <div class = "p-secao-sm">
-                <h5>Séries:</h5>
+                <h5>Séries (5) <small>(Mesma qtd. 2018)</small></h5>
             </div>
             <ul>
                 <li class = "mb-sm">Shooter (Netflix) - S01</li>
                 <li class = "mb-sm">Game of Thrones - S08</li>
                 <li class = "mb-sm">Dark - S02</li>
                 <li class = "mb-sm">Stranger Things - S03</li>
+                <li class = "mb-sm">The Witcher - S01</li>
             </ul>
             
             <div class = "p-secao-sm">
-                <h5>Animes:</h5>
+                <h5>Animes (0) <small>(-1 vs 2018)</small></h5>
             </div>
             
             <div class = "p-secao-sm">
-                <h5>HQs:</h5>                
+                <h5>HQs (1) <small>(-6 vs 2018)</small></h5>                
             </div>
             <ul>
                 <li class = "mb-sm">Ashe - Mãe de Guerra</li>
