--- a/app/views/pessoal/_navbar.html.erb
+++ b/app/views/pessoal/_navbar.html.erb
@@ -20,7 +20,7 @@
           <a class="nav-link" href=<%= desafios_path %>>Desafios</a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" href=<%=oqfev_path%>>O que fiz enquanto vivi?</a>
+          <a class="nav-link" href=<%=oquefiz_path%>>O que fiz enquanto vivi?</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href=<%= livros_path %>>Livros</a>
