--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Configurações Básicas -->
-    <title>Ricarth Lima</title>
+    <title><%= yield :title %> Ricarth Lima</title>
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
