--- a/app/views/pessoal/personal_books.html.erb
+++ b/app/views/pessoal/personal_books.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :title do %>
+    Meus livros -
+<% end %>
+
 <%= content_for :nav do%>
   <%= render "navbar" %>
 <% end %>
@@ -13,7 +17,7 @@
     
     Assim, inspirado no meu professor <a href = "http://viniciusgarcia.me/personalbooks/">Vinicius Garcia</a> (que se inspirou em outro professor meu,
     <a href = "https://sites.google.com/a/cin.ufpe.br/castor/personal/books">Fernando Castor</a>) vou passar a registrar minhas leituras. Para mim, isso serve tanto no sentido
-    do que comento na página <a href = <%= oqfev_path %>>O que fiz enquanto vivi?</a>, quanto como registro do meu avanço na leitura. Espero um dia chegar no nível deles haha.
+    do que comento na página <a href = <%= oquefiz_path %>>O que fiz enquanto vivi?</a>, quanto como registro do meu avanço na leitura. Espero um dia chegar no nível deles haha.
     <hr>
     <h2><center>Minhas 5 indicações!</center></h2>
     Em breve...
