--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :title do %>
+    O que fiz enquanto vivi? -
+<% end %>
+
 <%= content_for :nav do%>
   <%= render "navbar" %>
 <% end %>
