--- a/app/views/pessoal/wishlist.html.erb
+++ b/app/views/pessoal/wishlist.html.erb
@@ -1,3 +1,7 @@
+<%= content_for :title do %>
+    Lista de Presentes -
+<% end %>
+
 <%= content_for :nav do%>
   <%= render "pessoal/navbar" %>
 <% end %>
