adicionado mini portifolio

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -275,3 +275,8 @@ div.justificado{
 .botao-flutuante:hover{
     color: #dddddd;
 }
+
+.image-destaque{
+    border: 3px solid #2D431C;
+    border-radius: 75px;
+}
