--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -14,7 +14,7 @@
                 <img class = "image-destaque" src = "/assets/logos/evegano.png">
                 <a href = "https://evegano-aph.herokuapp.com/" target = "_blank"><h4>É vegano?</h4></a>
                 <small>
-                    Informamos se um produto é vegano ou não sem precisar perder tempo olhando rótulos.
+                    Informamos se um produto é vegano ou não, sem precisar perder tempo olhando rótulos.
                 </small>
                 <div style = "color: blue; font-size: 0.8em;">rails</div>
             </center>
@@ -34,7 +34,7 @@
                 <img class = "image-destaque" src = "/assets/logos/kemu-round.png" height = "128">
                 <a href = "http://www.kemu.com.br/" target = "_blank"><h4>Kemu</h4></a>
                 <small>
-                    Se gamificação na sala de aula é excelente para a didática mas traz uma sobrecarga imensa para o professor. Nós usamos tecnologia para tornar a gamificação viável.
+                    Gamificação na sala de aula é excelente para a didática mas traz uma sobrecarga imensa para o professor. Nós usamos tecnologia para tornar a gamificação viável.
                 </small>
                 <div style = "color: blue; font-size: 0.8em;">django, flutter</div>
             </center>
@@ -54,7 +54,7 @@
                 <img class = "image-destaque" src = "/assets/logos/euquero-round.png" height = "128">
                 <a href = "http://eu-quero.herokuapp.com/" target = "_blank"><h4>Eu quero!</h4></a>
                 <small>
-                    Vai dar uma aniversário, uma festa de casamento, um chá de bebê e quer criar uma lista de presentes para seus convidados? O Eu quero! te ajuda com isso! 
+                    Vai dar um aniversário, uma festa de casamento, um chá de bebê e quer criar uma lista de presentes para seus convidados? O Eu quero! te ajuda com isso! 
                 </small>
                 <div style = "color: blue; font-size: 0.8em;">rails</div>
             </center>
