--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -41,6 +41,10 @@
             </div>
             <ul>
                 <li class = "mb-sm">Frozen 2</li>
+                <li class = "mb-sm">Círculo de Fogo</li>
+                <li class = "mb-sm">Jumanji</li>
+                <li class = "mb-sm">Esquadrão Suicida</li>
+                <li class = "mb-sm">Dois Papas</li>
             </ul>
         </div>
         
@@ -49,6 +53,7 @@
                 <h5>Séries</h5>
             </div>
             <ul>
+                <li class = "mb-sm">The Boys - S01</li>
             </ul>
             
             <div class = "p-secao-sm">
