corrigida zueira do fara

--- a/app/views/fara/index.html.erb
+++ b/app/views/fara/index.html.erb
@@ -8,7 +8,9 @@
 <% end %>
 
 <%= content_for :fara_pages do %>
-    <center style = "padding-top: 30px;">
+<div class = "bg-black" style = "min-height: 90vh">
+        <div class = "container">
+            <center style = "padding-top: 30px;">
         <img src = "/assets/fara/icon512.png" class = "img-fluid" heigth = "256" width = "256">
         </br>    
         </br>
@@ -30,5 +32,8 @@
             <iframe width="560" height="315" src="https://www.youtube.com/watch?v=fUjABg_gSLY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
+        </div>
+    </div>
+    
     
 <% end %>
