--- a/app/views/profissional/_info_basica_foto.html.erb
+++ b/app/views/profissional/_info_basica_foto.html.erb
@@ -1,5 +1,8 @@
-<div class = "secao" id = "info">
-    <h2>O que é o mínimo que você precisa saber?</h2>
+<div class = "secao" id = "info">    
+    <h2>
+    <img src = "assets/icons/programmer.png" class = "secao-icon">
+    O que é o mínimo que você precisa saber?
+    </h2>
 </div>
 
 
