--- a/app/views/pessoal/index.html.erb
+++ b/app/views/pessoal/index.html.erb
@@ -9,7 +9,7 @@
 <%= render 'cabecalho' %>
 
 <div class = "p-secao" style = "margin-bottom: 0px;">
-    <h3>Mini Portifólio</h3>
+    <h3>Mini Portfólio</h3>
 </div>
 <div style = "padding: 15px; margin: auto;">
     <div class = "row align-items-start">
