--- a/app/views/profissional/_portifolio.html.erb
+++ b/app/views/profissional/_portifolio.html.erb
@@ -1,7 +1,7 @@
 <div class = "secao">    
     <h2>
     <img src = "assets/icons/dossier.png" class = "secao-icon">
-    O que é o mínimo que você precisa saber?
+    Portfólio
     </h2>
 </div>
 
