--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,7 +113,7 @@ div.titulo-imagem{
     
     color: #FFFFFF;
     
-    background-image: url('ricarth-fundo-azul.png');
+    background-image: url('ricarth-fundo-azul.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center 90%;
