--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -45,6 +45,8 @@
                 <li class = "mb-sm">Jumanji</li>
                 <li class = "mb-sm">Esquadrão Suicida</li>
                 <li class = "mb-sm">Dois Papas</li>
+                <li class = "mb-sm">Minha mãe é uma peça 3</li>
+                <li class = "mb-sm">Bad Boys - Para Sempre</li>
             </ul>
         </div>
         
