corrigido pequeno typo

--- a/app/views/profissional/_bom.html.erb
+++ b/app/views/profissional/_bom.html.erb
@@ -40,7 +40,7 @@
             <center> <img src = "/assets/logos/github.png" height = 75> <img src = "/assets/logos/bitbucket.png" height = 75></center>
         </div>
         <div class = "skills-text">
-            Estou familiarizado com o GitHub. Tanto no uso do controle de versão do Git, quanto nas inúmeras funcionalidades de col-3aboratividade que o GitHub traz.
+            Estou familiarizado com o GitHub. Tanto no uso do controle de versão do Git, quanto nas inúmeras funcionalidades de colaboratividade que o GitHub traz.
             Uso <a href = "https://github.com/ricarthlima" target = "_blank">GitHub</a> diariamente em projetos acadêmicos, 
             profissionais e pessoais. Tive uma experiência diferenciada com o Git usando BitBucket quando trabalhei na <a href = "http://www.serttel.com.br/" target = "_blank">Serttel</a>.
         </div>
