corrigido link do fara

--- a/app/views/profissional/_bom.html.erb
+++ b/app/views/profissional/_bom.html.erb
@@ -16,7 +16,7 @@
         <div class = "skills-text">
             Tenho uma forte experiência com o desenvolvimento mobile usando Flutter. 
             Com esse framework fui co-desenvolvedor do front-end do <a href = "http://www.kemu.com.br/" target = "_blank">Kemu Gamification</a>, 
-            do jogo <a href = "http://www.ricarth.me/fara" target = "_blank">F(or) A Real Angel</a>, e estou trabalhando no desenvolvimento de outros 
+            do jogo <a href = "http://bit.ly/play-fara" target = "_blank">F(or) A Real Angel</a>, e estou trabalhando no desenvolvimento de outros 
             sistemas, como um de controle de gastos e outro de lista de compras.
         </div>
     </div>
