--- a/app/views/profissional/_portifolio.html.erb
+++ b/app/views/profissional/_portifolio.html.erb
@@ -40,7 +40,7 @@
         <div class = "col-12 col-sm  align-self-start">
             <center>
                 <img class = "image-destaque" src = "/assets/logos/fara-round.png" height = "128">
-                <a href = "https://projeto-k22b.herokuapp.com/" target = "_blank"><h4>F(or) A Real Angel</h4></a>
+                <a href = "http://bit.ly/play-fara" target = "_blank"><h4>F(or) A Real Angel</h4></a>
                 <small>
                     Jogo de mistério e enigmas no estilo "riddle". 
                 </small>
