--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -369,3 +369,9 @@ div.secao{
     width: 400px;
     height: 400px;
 }
+
+.fara-video-small{
+    max-width: 85vw;
+    width: 200px;
+    height: 200px;
+}
