--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -47,6 +47,10 @@
                 <li class = "mb-sm">Dois Papas</li>
                 <li class = "mb-sm">Minha mãe é uma peça 3</li>
                 <li class = "mb-sm">Bad Boys - Para Sempre</li>
+                <li class = "mb-sm">Parasita</li>
+                <li class = "mb-sm">1917</li>
+                <li class = "mb-sm">Snow Pierce</li>
+                <li class = "mb-sm">Contágio</li>
             </ul>
         </div>
         
