--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -51,6 +51,7 @@
                 <li class = "mb-sm">1917</li>
                 <li class = "mb-sm">Snow Pierce</li>
                 <li class = "mb-sm">Contágio</li>
+                <li class = "mb-sm">Bacurau</li>
             </ul>
         </div>
         
