adicionado RoR na nova versao do CV

--- a/app/views/profissional/_bom.html.erb
+++ b/app/views/profissional/_bom.html.erb
@@ -8,6 +8,20 @@
 <div class = "row" style = "padding: 15px;">
     <div class = "col-12 col-sm-3">   
         <div class = "skills-title">
+            Ruby on Rails
+        </div>
+        <div class = "skills-images">
+            <center> <img src = "/assets/logos/rails.png" height = 75> </center>
+        </div>
+        <div class = "skills-text">
+            Minha primeira grande experiência com desenvolvimento de sistemas multiplataformas com arquitetura MVC foi usando Ruby on Rails. </br></br>
+            Meu <a href = "http://ricarth.me" target = "_blank">site pessoal</a>, o <a href = "http://evegano.herokuapp.com/" target = "_blank">É vegano?</a>, 
+            o  <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a>, o <a href = "http://eu-quero.herokuapp.com/" target = "_blank">Eu quero?</a> são exemplos
+            de sistemas que desenvolvi em Ruby on Rails e rodam no Heroku.
+        </div>
+    </div>
+    <div class = "col-12 col-sm-3">   
+        <div class = "skills-title">
             Flutter
         </div>
         <div class = "skills-images">
