--- a/app/views/profissional/_portifolio.html.erb
+++ b/app/views/profissional/_portifolio.html.erb
@@ -14,7 +14,7 @@
                 <small>
                     Informamos se um produto é vegano ou não, sem precisar perder tempo olhando rótulos.
                 </small>
-                <div style = "color: blue; font-size: 0.8em;">rails</div>
+                <div style = "color: red; font-size: 0.9em;">rails</div>
             </center>
         </div>
         <div class = "col-12 col-sm  align-self-start">
@@ -24,7 +24,7 @@
                 <small>
                     Hoje, a forma de medir a Máxima Fase Estável de Lactato é invasiva e cara. Queremos melhorar isso com matemática e tecnologia.
                 </small>
-                <div style = "color: blue; font-size: 0.8em;">rails, android nativo</div>
+                <div style = "color: red; font-size: 0.9em;">rails, android nativo</div>
             </center>
         </div>
         <div class = "col-12 col-sm  align-self-start">
@@ -34,7 +34,7 @@
                 <small>
                     Gamificação na sala de aula é excelente para a didática mas traz uma sobrecarga imensa para o professor. Nós usamos tecnologia para tornar a gamificação viável.
                 </small>
-                <div style = "color: blue; font-size: 0.8em;">django, flutter</div>
+                <div style = "color: red; font-size: 0.9em;">django, flutter</div>
             </center>
         </div>
         <div class = "col-12 col-sm  align-self-start">
@@ -44,7 +44,7 @@
                 <small>
                     Jogo de mistério e enigmas no estilo "riddle". 
                 </small>
-                <div style = "color: blue; font-size: 0.8em;">rails, flutter</div>
+                <div style = "color: red; font-size: 0.9em;">rails, flutter</div>
             </center>
         </div>
         <div class = "col-12 col-sm  align-self-start">
@@ -54,7 +54,7 @@
                 <small>
                     Vai dar um aniversário, uma festa de casamento, um chá de bebê e quer criar uma lista de presentes para seus convidados? O Eu quero! te ajuda com isso! 
                 </small>
-                <div style = "color: blue; font-size: 0.8em;">rails</div>
+                <div style = "color: red; font-size: 0.9em;">rails</div>
             </center>
         </div>
     </div>
