--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class = "footer">
     <center>
+        
         Você pode me encontrar nas minhas redes sociais: <br/>
         <div class = "footer-icons">
             <a href = "http://github.com/ricarthlima/" target = "_blank"><i class="fab fa-github mr-sm"></i></a> 
@@ -8,5 +9,6 @@
             <a href = "https://www.youtube.com/channel/UCFxy994CuYWRG0HOLBq0gyQ" target = "_blank"><i class="fab fa-youtube mr-sm"></i></a> 
             <a href = "https://medium.com/@rrsl" target = "_blank"><i class="fab fa-medium"></i></a>
         </div>
+        <small>Feito com ❤️ e Ruby on Rails</small>
     </center>
 </div>
