--- a/app/views/profissional/_bom.html.erb
+++ b/app/views/profissional/_bom.html.erb
@@ -14,36 +14,21 @@
             <center> <img src = "/assets/logos/rails.png" height = 75> </center>
         </div>
         <div class = "skills-text">
-            Minha primeira grande experiência com desenvolvimento de sistemas multiplataformas com arquitetura MVC foi usando Ruby on Rails. </br></br>
             Meu <a href = "http://ricarth.me" target = "_blank">site pessoal</a>, o <a href = "http://evegano.herokuapp.com/" target = "_blank">É vegano?</a>, 
             o  <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a>, o <a href = "http://eu-quero.herokuapp.com/" target = "_blank">Eu quero?</a> são exemplos
-            de sistemas que desenvolvi em Ruby on Rails e rodam no Heroku.
+            de sistemas que desenvolvi em Ruby on Rails e rodam no Heroku.</br></br>
+            Inclusive tenho uma playlist com vídeo aulas que dei sobre o assunto no meu <a href = "https://www.youtube.com/playlist?list=PLUISJzKGewLyM98AIB6OSWQG3CpPZVHTJ" target = "_blank"> canal do YouTube</a>.
         </div>
     </div>
     <div class = "col-12 col-sm-3">   
         <div class = "skills-title">
-            Flutter
+            Desenvolvimento Web
         </div>
         <div class = "skills-images">
-            <center> <img src = "/assets/logos/flutter.png" height = 75> </center>
+            <center> <img src = "/assets/logos/web.png" height = 75> </center>
         </div>
         <div class = "skills-text">
-            Tenho uma forte experiência com o desenvolvimento mobile usando Flutter. 
-            Com esse framework fui co-desenvolvedor do front-end do <a href = "http://www.kemu.com.br/" target = "_blank">Kemu Gamification</a>, 
-            do jogo <a href = "http://bit.ly/play-fara" target = "_blank">F(or) A Real Angel</a>, e estou trabalhando no desenvolvimento de outros 
-            sistemas, como um de controle de gastos e outro de lista de compras.
-        </div>
-    </div>
-    <div class = "col-12 col-sm-3">
-        <div class = "skills-title">
-            Java e Android
-        </div>
-        <div class = "skills-images">
-            <center> <img src = "/assets/logos/java.png" height = 75> <img src = "/assets/logos/android.png" height = 75> </center>
-        </div>
-        <div class = "skills-text"> 
-            Boa parte da minha vida de desenvolvedor foi com Java, portanto também tenho experiência com POO. 
-            Durante o período de 2014 à 2016 desenvolvi as primeiras versões do <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a> usando Android Nativo.
+            Durante meu estágio na Serttel pude aprimorar meus conhecimentos em desenvolvimento web. Passando do básico do HTML, CSS e Bootstrap, para Angular2 e TypeScript. 
         </div>
     </div>
     <div class = "col-12 col-sm-3">
@@ -72,6 +57,33 @@
             como o <a href = "http://evegano.herokuapp.com/" target = "_blank">É vegano?</a>, <a href = "http://www.kemu.com.br/" target = "_blank">Kemu Gamification</a> e o <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a>, 
             tive uma experiência real quando trabalhei na <a href = "http://www.serttel.com.br/" target = "_blank">Serttel</a>.
             Para complementar, também tenho experiência com Design Thinking e Lean Startup.
+        </div>
+    </div>
+    
+    <div class = "col-12 col-sm-3">   
+        <div class = "skills-title">
+            Flutter
+        </div>
+        <div class = "skills-images">
+            <center> <img src = "/assets/logos/flutter.png" height = 75> </center>
+        </div>
+        <div class = "skills-text">
+            Tenho uma forte experiência com o desenvolvimento mobile usando Flutter. 
+            Com esse framework fui co-desenvolvedor do front-end do <a href = "http://www.kemu.com.br/" target = "_blank">Kemu Gamification</a>, 
+            do jogo <a href = "http://bit.ly/play-fara" target = "_blank">F(or) A Real Angel</a>, e estou trabalhando no desenvolvimento de outros 
+            sistemas, como um de controle de gastos e outro de lista de compras.
+        </div>
+    </div>
+    <div class = "col-12 col-sm-3">
+        <div class = "skills-title">
+            Java e Android
+        </div>
+        <div class = "skills-images">
+            <center> <img src = "/assets/logos/java.png" height = 75> <img src = "/assets/logos/android.png" height = 75> </center>
+        </div>
+        <div class = "skills-text"> 
+            Boa parte da minha vida de desenvolvedor foi com Java, portanto também tenho experiência com POO. 
+            Durante o período de 2014 à 2016 desenvolvi as primeiras versões do <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a> usando Android Nativo.
         </div>
     </div>
     <div class = "col-12 col-sm-3">
@@ -121,6 +133,18 @@
         </div>
         <div class = "skills-text">
             Tenho interesse e estou aprendendo a usar ferramentas de back-end (Firebase), publicação (Google Play Console) e monetização (AdMob) da Google, em especial para projetos pessoais.
+        </div>
+    </div>
+    <div class = "col-12 col-sm-3">
+        <div class = "skills-title">
+            Photoshop e Design
+        </div>
+        <div class = "skills-images">
+            <center> <img src = "/assets/logos/ps.jpg" height = 75> </center>
+        </div>
+        <div class = "skills-text">
+            Uso Photoshop a mais de 10 anos. Começou como um hobby na época do CS3 e hoje utilizo esses conhecimentos nos projetos em que me envolvo. Em todos os projetos citados anteriormente, todas as artes foram criadas ou editadas por mim.</br>
+            Com a experiência ganhei noções de design, paleta de cores etc.
         </div>
     </div>
     
