--- a/app/views/profissional/_info_basica_foto.html.erb
+++ b/app/views/profissional/_info_basica_foto.html.erb
@@ -21,8 +21,10 @@
                 Olá! Sou <b>estudante de SI</b>, 
                 <b><a href = "http://github.com/ricarthlima" target = "_blank">programador</a></b>, 
                 aspirante à <b>empreendedor</b>, 
-                <b><a href = "http://instagram.com/rich_art96" target="_blank">artista</a></b>, 
                 <b><a href = "http://bit.ly/laco-py" target="_blank">professor</a></b>,
+                <b><a href = "https://www.youtube.com/playlist?list=PLUISJzKGewLyM98AIB6OSWQG3CpPZVHTJ" target="_blank">criador de conteúdo de programação</a></b>,
+                <b><a href = "http://instagram.com/rich_art96" target="_blank">artista</a></b>, 
+                
                 <b><a href = "https://steamcommunity.com/id/ricarthlima" target = "_blank">apaixonado por jogos</a></b> e 
                 talvez o maior fã da Mulher Maravilha que você conheça. Desde muito jovem me interesso por computadores 
                 e coisas que podemos fazer com eles.
