--- a/app/views/profissional/_formacao_academica.html.erb
+++ b/app/views/profissional/_formacao_academica.html.erb
@@ -1,5 +1,5 @@
 <div class = "secao" id = "academica">
-    <h2>Vida acadêmica</h2>
+    <h2>Sobre minha vida acadêmica</h2>
 </div>
 
 <div class = "texto">
