--- a/app/views/profissional/_info_basica_foto.html.erb
+++ b/app/views/profissional/_info_basica_foto.html.erb
@@ -1,7 +1,7 @@
 <div class = "secao" id = "info">    
     <h2>
     <img src = "assets/icons/programmer.png" class = "secao-icon">
-    O que é o mínimo que você precisa saber?
+    Antes de mais nada, o básico.
     </h2>
 </div>
 
