adicionado homem invisivel

--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -52,6 +52,7 @@
                 <li class = "mb-sm">Snow Pierce</li>
                 <li class = "mb-sm">Contágio</li>
                 <li class = "mb-sm">Bacurau</li>
+				<li class = "mb-sm">O Homem Invisível (2020)</li>
             </ul>
         </div>
         
