corrigidos detalhes do meu curriculo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -319,7 +319,7 @@ div.justificado{
 }
 
 div.secao{
-    padding: 3%;
+    padding: 1% 2% 1% 2%;
     background: var(--bg_blue);
     color: var(--light_blue);
     animation-name: bounceInLeft;
