--- a/app/views/pessoal/vivi.html.erb
+++ b/app/views/pessoal/vivi.html.erb
@@ -61,6 +61,7 @@
             </div>
             <ul>
                 <li class = "mb-sm">The Boys - S01</li>
+                <li class = "mb-sm">Westworld - S01</li>
             </ul>
             
             <div class = "p-secao-sm">
