--- a/app/views/profissional/_bom.html.erb
+++ b/app/views/profissional/_bom.html.erb
@@ -83,7 +83,7 @@
         </div>
         <div class = "skills-text"> 
             Boa parte da minha vida de desenvolvedor foi com Java, portanto também tenho experiência com POO. 
-            Durante o período de 2014 à 2016 desenvolvi as primeiras versões do <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a> usando Android Nativo.
+            Durante o período de 2014 a 2016 desenvolvi as primeiras versões do <a href = "http://lactorun.com.br/" target = "_blank">LactoRun</a> usando Android Nativo.
         </div>
     </div>
     <div class = "col-12 col-sm-3">
@@ -144,7 +144,7 @@
         </div>
         <div class = "skills-text">
             Uso Photoshop a mais de 10 anos. Começou como um hobby na época do CS3 e hoje utilizo esses conhecimentos nos projetos em que me envolvo. Em todos os projetos citados anteriormente, todas as artes foram criadas ou editadas por mim.</br>
-            Com a experiência ganhei noções de design, paleta de cores etc.
+            Com o tempo ganhei noções de design, paleta de cores etc.
         </div>
     </div>
     
