--- a/app/views/profissional/_formacao_academica.html.erb
+++ b/app/views/profissional/_formacao_academica.html.erb
@@ -18,9 +18,14 @@
                 <td>Bacharelado em Sistemas de Informação</td>
             </tr>
             <tr>
+                <td>2017 - 2020</td>
+                <td>Centro de Informática - Universidade Federal de Pernambuco</td>
+                <td>Bacharelado em Ciências da Computação (Não concluído)</td>
+            </tr>
+            <tr>
                 <td>2007 - 2013</td>
                 <td>Colégio de Aplicação do CE - UFPE</td>
-                <td>Ensino Médio e Fundamental II</td>
+                <td>Fundamental II e Ensino Médio</td>
             </tr>
         </tbody>
     </table>
