--- a/app/views/profissional/_historico_profissional.html.erb
+++ b/app/views/profissional/_historico_profissional.html.erb
@@ -11,6 +11,11 @@
         </thead>
         <tbody>
             <tr>
+                <td>Nov/2019 - Atual</td>
+                <td>Kemu Gamification</td>
+                <td>Fundador, Gerente de Desenvolvimento e Desenvolvedor</td>
+            </tr>
+            <tr>
                 <td>Jan/2019 - Jul/2019</td>
                 <td>Serttel</td>
                 <td>Desenvolvedor Full-Stack (Angular + Spring)</td>
