--- a/app/views/profissional/_idiomas.html.erb
+++ b/app/views/profissional/_idiomas.html.erb
@@ -6,7 +6,7 @@
     <table class = "table table-responsive-lg">
         <thead class = "nav-color">
             <th>Idioma</th>
-            <th>Compreede</th>
+            <th>Ouve</th>
             <th>Fala</th>
             <th>Lê</th>
             <th>Escreve</th>
