--- a/app/views/profissional/_portifolio.html.erb
+++ b/app/views/profissional/_portifolio.html.erb
@@ -32,7 +32,7 @@
                 <img class = "image-destaque" src = "/assets/logos/kemu-round.png" height = "128">
                 <a href = "http://www.kemu.com.br/" target = "_blank"><h4>Kemu</h4></a>
                 <small>
-                    Gamificação na sala de aula é excelente para a didática mas traz uma sobrecarga imensa para o professor. Nós usamos tecnologia para tornar a gamificação viável.
+                    Gamificação na sala de aula é excelente para a didática, mas traz uma sobrecarga imensa para o professor. Nós usamos tecnologia para tornar a gamificação viável.
                 </small>
                 <div style = "color: red; font-size: 0.9em;">django, flutter</div>
             </center>
